--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "@react-navigation/bottom-tabs": "^7.2.1",
+    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/stack": "^7.1.2",
     "expo": "~52.0.37",
     "expo-status-bar": "~2.0.1",
     "nativewind": "^4.1.23",
@@ -19,7 +22,9 @@
     "react-native": "0.76.7",
     "react-native-calendars": "^1.1310.0",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-svg": "^15.11.2",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.8.0",
     "react-native-web": "~0.19.13",
     "tailwindcss": "^3.4.17"
   },
