--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.76.7",
     "react-native-calendars": "^1.1310.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.8.0",
