--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-animatable": "^1.4.0",
     "react-native-calendars": "^1.1310.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-collapsible": "^1.6.2",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
