--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.4",
     "expo": "~52.0.42",
     "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.27.4",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "^0.76.9",
+    "react-native": "0.76.9",
     "react-native-animatable": "^1.4.0",
     "react-native-calendars": "^1.1310.0",
     "react-native-chart-kit": "^6.12.0",
@@ -32,8 +34,7 @@
     "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "tailwindcss": "^3.4.17",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2"
