--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@expo/metro-runtime": "~4.0.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.1",
+    "@react-navigation/material-top-tabs": "^7.2.10",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.4",
-    "expo": "~52.0.42",
+    "expo": "~52.0.46",
     "expo-status-bar": "~2.0.1",
     "expo-updates": "~0.27.4",
     "nativewind": "^4.1.23",
@@ -28,13 +29,17 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-collapsible": "^1.6.2",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-pager-view": "^6.5.1",
     "react-native-paper": "^5.13.1",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.8.0",
+    "react-native-svg": "15.8.0",
+    "react-native-tab-view": "^4.0.10",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "victory-native": "^36.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2"
