Upgraded to SDK 53 for expo go. Integrated delete workout endpoint from API. TODO tidy up modals, consistent colour.

--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/material-top-tabs": "^7.2.10",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.4",
-    "expo": "~52.0.46",
-    "expo-status-bar": "~2.0.1",
-    "expo-updates": "~0.27.4",
+    "expo": "~53.0.7",
+    "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.12",
     "nativewind": "^4.1.23",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-animatable": "^1.4.0",
     "react-native-calendars": "^1.1310.0",
     "react-native-chart-kit": "^6.12.0",
@@ -31,13 +31,13 @@
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-pager-view": "^6.5.1",
     "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
     "react-native-tab-view": "^4.0.10",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
+    "react-native-web": "^0.20.0",
     "tailwindcss": "^3.4.17",
     "victory-native": "^36.6.8"
   },
