--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-calendars": "^1.1310.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-collapsible": "^1.6.2",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-pager-view": "^6.5.1",
     "react-native-paper": "^5.13.1",
