--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-animatable": "^1.4.0",
+    "react-native-autocomplete-dropdown": "^5.0.0",
     "react-native-calendars": "^1.1310.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-collapsible": "^1.6.2",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-pager-view": "^6.5.1",
     "react-native-paper": "^5.13.1",
