--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "react-native-calendars": "^1.1310.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-collapsible": "^1.6.2",
+    "react-native-draggable-flatlist": "^4.0.3",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-element-dropdown": "^2.12.4",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-pager-view": "^6.5.1",
     "react-native-paper": "^5.13.1",
@@ -39,6 +41,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "15.11.2",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-tab-view": "^4.0.10",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
