--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.4",
-    "expo": "~53.0.7",
+    "expo": "^53.0.11",
     "expo-status-bar": "~2.2.3",
-    "expo-updates": "~0.28.12",
+    "expo-updates": "^0.28.14",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "^0.79.3",
     "react-native-animatable": "^1.4.0",
     "react-native-autocomplete-dropdown": "^5.0.0",
     "react-native-calendars": "^1.1310.0",
@@ -33,13 +33,13 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-element-dropdown": "^2.12.4",
-    "react-native-gesture-handler": "^2.25.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-pager-view": "^6.5.1",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-tab-view": "^4.0.10",
